--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
 
 <!-- <embed src="../pdf/pinfo.pdf"/>  -->
 <div id="title">
-	<a href="https://github.com/xuechinahb/pinfo/blob/master/pdf/pinfo.pdf?raw=true">PDF Download</a>
+	<a href="https://github.com/xuechinahb/pinfo/blob/master/pdf/pinfo.pdf?raw=true">Resume Download</a>
 </div>
 <div id="container"></div>
 <script src="./pdfobject.js"></script>
